Refactor 3D FFTs benchmarks to 3D convolutions